correct mistake in gradient of factor analysis model

--- a/slides/13-optim/13-optim.html
+++ b/slides/13-optim/13-optim.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Dr. Hua Zhou @ UCLA">
-<meta name="dcterms.date" content="2023-11-30">
+<meta name="dcterms.date" content="2023-12-03">
 
 <title>Optimization and Multivariate Calculus</title>
 <style>
@@ -3182,7 +3182,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 30, 2023</p>
+      <p class="date">December 3, 2023</p>
     </div>
   </div>
   
@@ -4878,7 +4878,7 @@ e^{2z_1 + z_2}
 <li><p>Example: <a href="https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q17-mle-of-multivariate-normal">HW6 Q17</a>. Take derivative of the multivariate normal log-density.</p></li>
 <li><p>Example: <a href="https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q20-procrustes-rotation">HW6 Q20</a>. Take derivative of the Procrustes criterion function.</p></li>
 <li><p>Example: <a href="https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q22-factor-analysis">HW6 Q22</a>. Take derivative of the factor analysis log-likelihood function. Hint: The answer is <span class="math display">\[\begin{eqnarray*}
-  \frac{\partial \ell(\mathbf{F}, \mathbf{D})}{\partial \mathbf{F}} = - \frac n2 \boldsymbol{\Omega}^{-1} \mathbf{F} + \frac n2 \boldsymbol{\Omega}^{-1} \mathbf{S} \boldsymbol{\Omega}^{-1} \mathbf{F}
+  \frac{\partial \ell(\mathbf{F}, \mathbf{D})}{\partial \mathbf{F}} = - n \boldsymbol{\Omega}^{-1} \mathbf{F} + n \boldsymbol{\Omega}^{-1} \mathbf{S} \boldsymbol{\Omega}^{-1} \mathbf{F}
 \end{eqnarray*}\]</span> and <span class="math display">\[\begin{eqnarray*}
   \frac{\partial \ell(\mathbf{F}, \mathbf{D})}{\partial \mathbf{D}} = - \frac n2 \text{diag} (\boldsymbol{\Omega}^{-1} -\boldsymbol{\Omega}^{-1} \mathbf{S} \boldsymbol{\Omega}^{-1}),
 \end{eqnarray*}\]</span> where <span class="math inline">\(\boldsymbol{\Omega} = \mathbf{F} \mathbf{F}&#39; + \mathbf{D}\)</span>.</p></li>
