--- a/hw/hw4/hw4.html
+++ b/hw/hw4/hw4.html
@@ -3134,7 +3134,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
 <h2 data-number="1" class="anchored" data-anchor-id="q1"><span class="header-section-number">1</span> Q1</h2>
 <p>For any <span class="math inline">\(\mathbf{X} \in \mathbb{R}^{n \times p}\)</span> and <span class="math inline">\(\mathbf{y} \in \mathbb{R}^n\)</span>, show that the normal equation <span class="math display">\[
 \mathbf{X}&#39; \mathbf{X} \boldsymbol{\beta} = \mathbf{X}&#39; \mathbf{y}
-\]</span> always have at least one solution.</p>
+\]</span> always has at least one solution.</p>
 </section>
 <section id="q2" class="level2" data-number="2">
 <h2 data-number="2" class="anchored" data-anchor-id="q2"><span class="header-section-number">2</span> Q2</h2>
