--- a/hw/hw6/hw6.html
+++ b/hw/hw6/hw6.html
@@ -3112,7 +3112,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
   <ul>
   <li><a href="#q7" id="toc-q7" class="nav-link" data-scroll-target="#q7">Q7</a></li>
   <li><a href="#q8" id="toc-q8" class="nav-link" data-scroll-target="#q8">Q8</a></li>
-  <li><a href="#q9-raleigh-quotient" id="toc-q9-raleigh-quotient" class="nav-link" data-scroll-target="#q9-raleigh-quotient">Q9 (Raleigh quotient)</a></li>
+  <li><a href="#q9-rayleigh-quotient" id="toc-q9-rayleigh-quotient" class="nav-link" data-scroll-target="#q9-rayleigh-quotient">Q9 (Rayleigh quotient)</a></li>
   </ul></li>
   <li><a href="#svd" id="toc-svd" class="nav-link" data-scroll-target="#svd">SVD</a>
   <ul>
@@ -3223,8 +3223,8 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
 <h3 class="anchored" data-anchor-id="q8">Q8</h3>
 <p>Show that the diagonal entries of a positive definite matrix are positive.</p>
 </section>
-<section id="q9-raleigh-quotient" class="level3">
-<h3 class="anchored" data-anchor-id="q9-raleigh-quotient">Q9 (Raleigh quotient)</h3>
+<section id="q9-rayleigh-quotient" class="level3">
+<h3 class="anchored" data-anchor-id="q9-rayleigh-quotient">Q9 (Rayleigh quotient)</h3>
 <p>Suppose <span class="math inline">\(\mathbf{S}\)</span> is positive definite with eigenvalues <span class="math inline">\(\lambda_1 \ge \lambda_2 \ge \cdots \ge \lambda_n &gt; 0\)</span> with corresponding orthonormal eigenvectors <span class="math inline">\(\mathbf{u}_1, \mathbf{u}_2, \ldots, \mathbf{u}_n\)</span>.</p>
 <ol type="1">
 <li><p>What are the eigenvalues of the matrix <span class="math inline">\(\lambda_1 \mathbf{I} - \mathbf{S}\)</span>? Is it positive semidefinite?</p></li>
